[FIX] Capitalization of translatable strings

--- a/afat/templates/afat/modals/general.html
+++ b/afat/templates/afat/modals/general.html
@@ -10,7 +10,7 @@
                 </button>
 
                 <h5 class="modal-title" id="{{ modal_name }}ModalLongTitle">
-                    {{ modal_title }}
+                    {{ modal_title|title }}
                 </h5>
             </div>
 
