--- a/afat/templates/afat/partials/fatlinks/add/esi_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/esi_link.html
@@ -6,7 +6,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
-                {% translate "Create link using ESI" %}
+                {% translate "Create FAT link using ESI" %}
             </h3>
         </div>
 
@@ -45,7 +45,7 @@
                     <button class="btn btn-primary" type="submit" name="submit_click">
                         <span class="fa fa-plus fa-fw"></span>
 
-                        {% translate "Add ESI Link" %}
+                        {% translate "Add ESI link" %}
                     </button>
                 </div>
             </form>
