--- a/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_name_form.html
@@ -7,10 +7,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder='{% translate "Fleet Name" %}' name="fleet" {% if link.fleet %}value="{{ link.fleet }}" {% endif %}>
+                        <input type="text" class="form-control" placeholder='{% translate "Fleet name" %}' name="fleet" {% if link.fleet %}value="{{ link.fleet }}" {% endif %}>
 
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" type="submit" name="set_name">{% translate "Set Name" %}</button>
+                            <button class="btn btn-primary" type="submit" name="set_name">
+                                {% translate "Set name" %}
+                            </button>
                         </span>
                     </div>
                 </div>
