--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -8,10 +8,10 @@
             <thead>
                 <tr>
                     <th>{% translate "Name" %}</th>
-                    <th>{% translate "Fleet Type" %}</th>
+                    <th>{% translate "Fleet type" %}</th>
                     <th>{% translate "Location" %}</th>
                     <th>{% translate "Ship" %}</th>
-                    <th>{% translate "EVE Time" %}</th>
+                    <th>{% translate "Eve time" %}</th>
                 </tr>
             </thead>
 
