--- a/afat/templates/afat/partials/statistics/corporation/tabs/member.html
+++ b/afat/templates/afat/partials/statistics/corporation/tabs/member.html
@@ -9,7 +9,7 @@
                 <tr>
                     <th>{% translate "Character" %}</th>
                     <th>{% translate "FATs" %}</th>
-                    <th><!-- {% translate "Character Stats" %} --></th>
+                    <th><!-- {% translate "Character statistics" %} --></th>
                 </tr>
             </thead>
 
