--- a/afat/templates/afat/view/statistics/statistics_alliance.html
+++ b/afat/templates/afat/view/statistics/statistics_alliance.html
@@ -3,7 +3,10 @@
 {% load evelinks %}
 {% load i18n %}
 
-{% block page_title %}{{ alliance }} {% translate "Statistics" %}{% endblock %}
+{% block page_title %}
+    {% translate "Fleet activity tracking statistics" as page_title %}
+    {{ alliance }} {{ page_title|title }}
+{% endblock %}
 
 {% block afat_header %}
     <br>
