--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -2,7 +2,10 @@
 
 {% load i18n %}
 
-{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
+{% block page_title %}
+    {% translate "Fleet activity tracking" as page_title %}
+    {{ page_title|title }}
+{% endblock %}
 
 {% block content %}
     <div class="allianceauth-afat">
