--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -3,16 +3,16 @@
 <div id="fatlinks" class="tab-pane fade panel panel-default">
     <div class="panel-body">
         <h4>
-            {% translate "Most Recent FAT Links <small>(latest 10)</small>" %}
+            {% translate "Most recent FAT links <small>(latest 10)</small>" %}
         </h4>
 
         <table class="table table-striped table-hover no-footer" id="dashboard-recent-fatlinks" style="width: 100%;">
             <thead>
                 <tr>
-                    <th>{% translate "Fleet Name" %}</th>
-                    <th>{% translate "Fleet Type" %}</th>
+                    <th>{% translate "Fleet name" %}</th>
+                    <th>{% translate "Fleet type" %}</th>
                     <th>{% translate "Creator" %}</th>
-                    <th>{% translate "EVE Time" %}</th>
+                    <th>{% translate "Eve time" %}</th>
                     <th><!-- {% translate "Actions" %} --></th>
                 </tr>
             </thead>
