--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -7,7 +7,9 @@
 
 <div id="fats" class="tab-pane fade in active panel panel-default">
     <div class="panel-body">
-        <h4>{% translate "Your Most Recent FATs" %}</h4>
+        <h4>
+            {% translate "Your most recent FATs" %}
+        </h4>
 
         <p>{% translate "Only characters that have recent FATs are shown. <small>(latest 10 FATs per character)</small>" %}</p>
 
@@ -37,11 +39,11 @@
                             <table class="table table-striped table-hover" id="recent-fats-character-{{ character.character_id }}" style="width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th>{% translate "Fleet Name" %}</th>
-                                        <th>{% translate "Fleet Type" %}</th>
+                                        <th>{% translate "Fleet name" %}</th>
+                                        <th>{% translate "Fleet type" %}</th>
                                         <th>{% translate "Location" %}</th>
                                         <th>{% translate "Ship" %}</th>
-                                        <th>{% translate "EVE Time" %}</th>
+                                        <th>{% translate "Eve time" %}</th>
                                     </tr>
                                 </thead>
 
