--- a/afat/templates/afat/partials/dashboard/tabs_navigation.html
+++ b/afat/templates/afat/partials/dashboard/tabs_navigation.html
@@ -2,5 +2,9 @@
 
 <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#fats">{% translate "FATs" %}</a></li>
-    <li><a data-toggle="tab" href="#fatlinks">{% translate "FAT Links" %}</a></li>
+    <li>
+        <a data-toggle="tab" href="#fatlinks">
+            {% translate "FAT links" %}
+        </a>
+    </li>
 </ul>
