--- a/afat/templates/afat/partials/fatlinks/add/clickable_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/clickable_link.html
@@ -5,7 +5,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
-                {% translate "Create a clickable FAT Link" %}
+                {% translate "Create a clickable FAT link" %}
             </h3>
         </div>
 
@@ -32,7 +32,7 @@
                     <button class="btn btn-primary" type="submit" name="submit_click">
                         <span class="fa fa-plus fa-fw"></span>
 
-                        {% translate "Create Link" %}
+                        {% translate "Create link" %}
                     </button>
                 </div>
             </form>
