--- a/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
@@ -4,17 +4,19 @@
     <div class="panel-body clearfix">
         <div class="col-md-8">
             {% if link_ongoing %}
-                <h4>{% translate "FATs for this FAT Link <small>(updated every 15 seconds)</small>" %}</h4>
+                {% translate "FATs for this FAT link <small>(updated every 15 seconds)</small>" as header %}
             {% else %}
-                <h4>{% translate "FATs for this FAT Link" %}</h4>
+                {% translate "FATs for this FAT link" as header %}
             {% endif %}
+
+            <h4>{{ header }}</h4>
 
             <table class="table table-striped table-hover" id="fleet-edit-fat-list" style="width: 100%;">
                 <thead>
                     <tr>
                         <th>{% translate "Character" %}</th>
                         <th>{% translate "Location" %}</th>
-                        <th>{% translate "Ship Type" %}</th>
+                        <th>{% translate "Ship type" %}</th>
                         <th><!-- {% translate "Actions" %} --></th>
                     </tr>
                 </thead>
@@ -24,12 +26,16 @@
         </div>
 
         <div class="col-md-4">
-            <h4>{% translate "Ship Type Overview" %}</h4>
+            <h4>
+                {% translate "Ship type overview" %}
+            </h4>
 
             <table class="table table-striped table-hover" id="fleet-edit-ship-types" style="width: 100%;">
                 <thead>
                     <tr>
-                        <th>{% translate "Ship Type" %}</th>
+                        <th>
+                            {% translate "Ship type" %}
+                        </th>
                         <th class="text-right">{% translate "Count" %}</th>
                     </tr>
                 </thead>
