--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -4,7 +4,7 @@
 <div class="tab-pane fade in panel panel-default" id="members">
     <div class="panel-body">
         <h3>
-            {{ alliance }} {% translate "Member Corporations" %}
+            {{ alliance }} {% translate "Member corporations" as header_title %}
         </h3>
 
         <table class="table table-striped table-hover" id="member-corps" style="width: 100%;">
@@ -13,7 +13,7 @@
                     <th>{% translate "Corporation" %}</th>
                     <th>{% translate "FATs" %}</th>
                     <th>{% translate "Avg FATs" %}</th>
-                    <th><!-- {% translate "Corporation Stats" %} --></th>
+                    <th><!-- {% translate "Corporation statistics" %} --></th>
                 </tr>
             </thead>
 
