--- a/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/graphs.html
@@ -3,18 +3,32 @@
 <div id="graphs" class="tab-pane fade in active panel panel-default">
     <div class="panel-body">
         <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="tab" href="#fatsbyship">{% translate "FATs By Ship Type" %}</a></li>
-            <li><a data-toggle="tab" href="#avgfats">{% translate "Corporation Performance" %}</a></li>
-            <li><a data-toggle="tab" href="#fatsbytime">{% translate "FATs By Time" %}</a></li>
-            <li><a data-toggle="tab" href="#fatsbyweek">{% translate "FATs By Weekday" %}</a></li>
+            <li class="active">
+                <a data-toggle="tab" href="#fatsbyship">
+                    {% translate "FATs by ship type" %}
+                </a>
+            </li>
+            <li>
+                <a data-toggle="tab" href="#avgfats">
+                    {% translate "Corporation performance" %}
+                </a>
+            </li>
+            <li>
+                <a data-toggle="tab" href="#fatsbytime">
+                    {% translate "FATs by time" %}
+                </a>
+            </li>
+            <li>
+                <a data-toggle="tab" href="#fatsbyweek">
+                    {% translate "FATs by weekday" %}
+                </a>
+            </li>
         </ul>
 
         <div class="tab-content">
             <div class="tab-pane fade in active panel-default" id="fatsbyship">
                 <div class="panel-body">
-                    <h3>
-                        {% translate "FATs by Ship Type" %}
-                    </h3>
+                    <h4>{% translate "FATs by ship type" %}</h4>
 
                     <canvas id="ship-pie" width="800" height="500"></canvas>
 
@@ -38,9 +52,7 @@
 
             <div id="fatsbytime" class="tab-pane fade in panel-default">
                 <div class="panel-body">
-                    <h3>
-                        {% translate "FATs by Time" %}
-                    </h3>
+                    <h4>{% translate "FATs by time" %}</h4>
 
                     <canvas id="time-line" width="800" height="500"></canvas>
 
@@ -65,9 +77,7 @@
 
             <div class="tab-pane fade in panel-default" id="fatsbyweek">
                 <div class="panel-body">
-                    <h3>
-                        {% translate "FATs by Weekday" %}
-                    </h3>
+                    <h4>{% translate "FATs by weekday" %}</h4>
 
                     <canvas id="weekday-line" width="800" height="500"></canvas>
 
@@ -92,9 +102,7 @@
 
             <div class="tab-pane fade in panel-default" id="avgfats">
                 <div class="panel-body">
-                    <h3>
-                        {% translate "Average FATs by Corporation" %}
-                    </h3>
+                    <h4>{% translate "Average FATs by corporation" %}</h4>
 
                     <canvas id="avgs" width="1000" height="700"></canvas>
 
