--- a/afat/templates/afat/partials/statistics/character/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/graphs.html
@@ -3,7 +3,7 @@
 <div id="graphs" class="tab-pane fade in active panel panel-default">
     <div class="panel-body">
         <div class="col-md-4">
-            <h4>{% translate "FATs by Ship Type" %}</h4>
+            <h4>{% translate "FATs by ship type" %}</h4>
 
             <canvas style="width: 400px; max-width: 100%; height: 400px;" id="pie-ship"></canvas>
 
@@ -25,12 +25,12 @@
         </div>
 
         <div class="col-md-8">
-            <h4>{% translate "FATs by Time of Day" %}</h4>
+            <h4>{% translate "FATs by time of day" %}</h4>
 
             <canvas style="width: 100%; height: 400px;" id="line-time"></canvas>
 
             <script>
-                let FATLineChart = new Chart(document.getElementById("line-time"),{
+                let FATLineChart = new Chart(document.getElementById("line-time"), {
                     type: "line",
                     data: {
                         datasets: [{
