--- a/afat/templates/afat/partials/statistics/character/tabs_navigation.html
+++ b/afat/templates/afat/partials/statistics/character/tabs_navigation.html
@@ -2,5 +2,9 @@
 
 <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#graphs">{% translate "Graphs" %}</a></li>
-    <li><a data-toggle="tab" href="#rawdata">{% translate "Raw Data" %}</a></li>
+    <li>
+        <a data-toggle="tab" href="#rawdata">
+            {% translate "Raw data" %}
+        </a>
+    </li>
 </ul>
