--- a/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_details_fatlink.html
@@ -2,13 +2,20 @@
 
 {% load i18n %}
 
-{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
+{% block page_title %}
+    {% translate "Fleet activity tracking" as page_title %}
+    {{ page_title|title }}
+{% endblock %}
 
 {% block afat_header %}
     <br>
     {% include "afat/partials/menu.html" %}
 
-    <h2>{% translate "FAT Link Details" %}</h2>
+    <h2>
+        {% translate "FAT link details" as site_title %}
+        {{ site_title|title }}
+    </h2>
+    </h2>
 {% endblock %}
 
 {% block afat_body %}
