--- a/afat/templates/afat/view/fatlinks/fatlinks_overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_overview.html
@@ -2,19 +2,26 @@
 
 {% load i18n %}
 
-{% block page_title %}{% translate "Fleet Activity" %}{% endblock %}
+{% block page_title %}
+    {% translate "Fleet activity tracking" as page_title %}
+    {{ page_title|title }}
+{% endblock %}
 
 {% block afat_header %}
     <br>
     {% include "afat/partials/menu.html" %}
 
-    <h2>{% translate "All FAT Links" %}</h2>
+    <h2>
+        {% translate "All FAT links" as site_title %}
+        {{ site_title|title }}
+    </h2>
 {% endblock %}
 
 {% block afat_body %}
     {% url "afat:fatlinks_overview" year_prev as url_previous_year %}
     {% url "afat:fatlinks_overview" year_next as url_next_year %}
     {% url "afat:fatlinks_overview" year_current as url_current_year %}
+
     {% include "afat/partials/year_navigation.html" with url_previous_year=url_previous_year url_next_year=url_next_year url_current_year=url_current_year %}
 
     <div class="panel panel-default">
@@ -22,10 +29,10 @@
             <table class="table table-striped table-hover" id="link-list" style="width: 100%;">
                 <thead>
                     <tr>
-                        <th>{% translate "Fleet Name" %}</th>
-                        <th>{% translate "Fleet Type" %}</th>
+                        <th>{% translate "Fleet name" %}</th>
+                        <th>{% translate "Fleet type" %}</th>
                         <th>{% translate "Creator" %}</th>
-                        <th>{% translate "EVE Time" %}</th>
+                        <th>{% translate "Eve time" %}</th>
                         <th>{% translate "# of FATs" %}</th>
                         <th><!-- {% translate "Actions" %} --></th>
                     </tr>
@@ -44,10 +51,10 @@
         </div>
     </div>
 
-    {% translate "Delete FAT Link" as translated_title %}
+    {% translate "Delete FAT link" as translated_title %}
     {% include "afat/modals/general.html" with modal_name="deleteFatLink" modal_title=translated_title confirm_button_class="btn-danger" %}
 
-    {% translate "Close ESI Fleet Tracking" as translated_title %}
+    {% translate "Close ESI fleet tracking" as translated_title %}
     {% include "afat/modals/general.html" with modal_name="cancelEsiFleet" modal_title=translated_title confirm_button_class="btn-danger" %}
 {% endblock %}
 
