--- a/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink_info.html
@@ -6,7 +6,7 @@
             {% translate "Creator" %}: {{ link.creator.profile.main_character.character_name }}
         </div>
 
-        <div class="col-md-6 text-right">
+        <div class="col-md-6 text-end">
             <p>
                 {% translate "Link created (Eve Time)" %}: {{ link.created|date:"d. F Y H:i" }}
 
