--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 
-<div id="fatlinks" class="tab-pane fade panel panel-default">
-    <div class="panel-body">
+<div id="fatlinks" class="tab-pane fade card card-default">
+    <div class="card-body">
         <h4>
             {% translate "Most recent FAT links <small>(latest 10)</small>" %}
         </h4>
 
-        <table class="table table-striped table-hover no-footer" id="dashboard-recent-fatlinks" style="width: 100%;">
+        <table class="table table-striped table-hover no-footer w-100" id="dashboard-recent-fatlinks">
             <thead>
                 <tr>
                     <th>{% translate "Fleet name" %}</th>
