--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -5,8 +5,8 @@
     let characters = [];
 </script>
 
-<div id="fats" class="tab-pane fade in active panel panel-default">
-    <div class="panel-body">
+<div id="fats" class="tab-pane fade in active card card-default">
+    <div class="card-body">
         <h4>
             {% translate "Your most recent FATs" %}
         </h4>
@@ -34,9 +34,9 @@
 
             <div class="tab-content">
                 {% for character in characters %}
-                    <div id="{{ character.character_id }}" class="tab-pane fade in panel-default{% if forloop.first %} active{% endif %}">
-                        <div class="panel-body">
-                            <table class="table table-striped table-hover" id="recent-fats-character-{{ character.character_id }}" style="width: 100%;">
+                    <div id="{{ character.character_id }}" class="tab-pane fade in card-default{% if forloop.first %} active{% endif %}">
+                        <div class="card-body">
+                            <table class="table table-striped table-hover w-100" id="recent-fats-character-{{ character.character_id }}">
                                 <thead>
                                     <tr>
                                         <th>{% translate "Fleet name" %}</th>
