--- a/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<div id="fats" class="tab-pane fade in active panel panel-default">
-    <div class="panel-body clearfix">
+<div id="fats" class="tab-pane fade in active card card-default">
+    <div class="card-body clearfix">
         <div class="col-md-8">
             {% if link_ongoing %}
                 {% translate "FATs for this FAT link <small>(updated every 15 seconds)</small>" as header %}
@@ -11,7 +11,7 @@
 
             <h4>{{ header }}</h4>
 
-            <table class="table table-striped table-hover" id="fleet-edit-fat-list" style="width: 100%;">
+            <table class="table table-striped table-hover w-100" id="fleet-edit-fat-list">
                 <thead>
                     <tr>
                         <th>{% translate "Character" %}</th>
@@ -30,13 +30,13 @@
                 {% translate "Ship type overview" %}
             </h4>
 
-            <table class="table table-striped table-hover" id="fleet-edit-ship-types" style="width: 100%;">
+            <table class="table table-striped table-hover w-100" id="fleet-edit-ship-types">
                 <thead>
                     <tr>
                         <th>
                             {% translate "Ship type" %}
                         </th>
-                        <th class="text-right">{% translate "Count" %}</th>
+                        <th class="text-end">{% translate "Count" %}</th>
                     </tr>
                 </thead>
 
