--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -1,13 +1,13 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div class="tab-pane fade in panel panel-default" id="members">
-    <div class="panel-body">
+<div class="tab-pane fade in card card-default" id="members">
+    <div class="card-body">
         <h3>
             {{ alliance }} {% translate "Member corporations" as header_title %}
         </h3>
 
-        <table class="table table-striped table-hover" id="member-corps" style="width: 100%;">
+        <table class="table table-striped table-hover w-100" id="member-corps">
             <thead>
                 <tr>
                     <th>{% translate "Corporation" %}</th>
@@ -23,7 +23,7 @@
                         <td><img src="{{ value.0|corporation_logo_url:32 }}" style="margin-right: 1rem;" alt="{{ key }}">{{ key }}</td>
                         <td>{{ value.1 }}</td>
                         <td>{{ value.2 }}</td>
-                        <td class="text-right">
+                        <td class="text-end">
                             <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' value.0 year month %}">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                             </a>
