--- a/afat/templates/afat/partials/statistics/character/tabs/graphs.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/graphs.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<div id="graphs" class="tab-pane fade in active panel panel-default">
-    <div class="panel-body">
+<div id="graphs" class="tab-pane fade in active card card-default">
+    <div class="card-body">
         <div class="col-md-4">
             <h4>{% translate "FATs by ship type" %}</h4>
 
@@ -27,7 +27,7 @@
         <div class="col-md-8">
             <h4>{% translate "FATs by time of day" %}</h4>
 
-            <canvas style="width: 100%; height: 400px;" id="line-time"></canvas>
+            <canvas class="w-100" style="height: 400px;" id="line-time"></canvas>
 
             <script>
                 let FATLineChart = new Chart(document.getElementById("line-time"), {
