--- a/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
+++ b/afat/templates/afat/partials/statistics/character/tabs/raw_data.html
@@ -1,10 +1,10 @@
 {% load i18n %}
 
-<div id="rawdata" class="tab-pane fade panel panel-default">
-    <div class="panel-body">
+<div id="rawdata" class="tab-pane fade card card-default">
+    <div class="card-body">
         <h4>{% translate "FATs for" %} {{ character.character_name }}</h4>
 
-        <table class="table table-striped table-hover" id="raw-data" style="width: 100%;">
+        <table class="table table-striped table-hover w-100" id="raw-data">
             <thead>
                 <tr>
                     <th>{% translate "Name" %}</th>
