--- a/afat/templates/afat/partials/statistics/overview/tabs/corps.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corps.html
@@ -1,19 +1,19 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div id="corps" class="tab-pane fade panel panel-default">
-    <div class="panel-body">
+<div id="corps" class="tab-pane fade card card-default">
+    <div class="card-body">
         {% if user_can_see_other_corps %}
             <h4>{% translate "Corporations <small>(Click on an alliance name to see their corporations)</small>" %}</h4>
         {% endif %}
 
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="margin-bottom: 0;">
+        <div class="card-group" id="accordion" role="tablist" aria-multiselectable="true" style="margin-bottom: 0;">
             {% if perms.afat.stats_corporation_other or perms.afat.manage_afat %}
                 {% for key, value in data.items|dictsort:0 %}
                     {% if value|length > 0 %}
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="heading{{ value.0 }}">
-                                <h4 class="panel-title">
+                        <div class="card card-default">
+                            <div class="card-header" role="tab" id="heading{{ value.0 }}">
+                                <h4 class="card-title mb-0">
                                     <img src="{{ value.0|alliance_logo_url:32 }}" alt="{{ key }}" style="margin-right: 0.25rem;">
 
                                     <a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#{{ value.0 }}" aria-expanded="false" aria-controls="{{ value.0 }}">
@@ -28,8 +28,8 @@
                                 </h4>
                             </div>
 
-                            <div id="{{ value.0 }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ value.0 }}">
-                                <div class="panel-body">
+                            <div id="{{ value.0 }}" class="card-collapse collapse" role="tabpanel" aria-labelledby="heading{{ value.0 }}">
+                                <div class="card-body">
                                     <table class="table table-striped table-hover" style="margin-bottom: 0;">
                                         <tbody>
                                             {% for corp in value %}
@@ -41,7 +41,7 @@
                                                             {{ corp.1 }}
                                                         </td>
 
-                                                        <td class="text-right">
+                                                        <td class="text-end">
                                                             <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' corp.0 year %}">
                                                                 <span class="glyphicon glyphicon-eye-open"></span>
                                                             </a>
@@ -65,7 +65,7 @@
                                 {{ data.0.1 }}
                             </td>
 
-                            <td class="text-right">
+                            <td class="text-end">
                                 <a class="btn btn-primary btn-sm" href="{% url 'afat:statistics_corporation' data.0.0 year %}">
                                     <span class="glyphicon glyphicon-eye-open"></span>
                                 </a>
