--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -2,8 +2,8 @@
 {% load evelinks %}
 {% load i18n %}
 
-<div id="mine" class="tab-pane fade in active panel panel-default">
-    <div class="panel-body">
+<div id="mine" class="tab-pane fade in active card card-default">
+    <div class="card-body">
         <h4>{% translate "Your monthly stats" %}</h4>
 
         <p>
@@ -25,8 +25,8 @@
         <div class="tab-content">
             {% if charstats %}
                 {% for char in charstats %}
-                    <div id="{{ char.2 }}" class="tab-pane panel-default fade{% if forloop.first %} in active{% endif %}">
-                        <div class="panel-body">
+                    <div id="{{ char.2 }}" class="tab-pane card-default fade{% if forloop.first %} in active{% endif %}">
+                        <div class="card-body">
                             {% if char.1|length > 0 %}
                                 <table class="table table-striped table-hover">
                                     <thead>
@@ -42,7 +42,7 @@
                                             <tr>
                                                 <td>{{ month|month_name }}</td>
                                                 <td>{{ fatcount }}</td>
-                                                <td class="text-right">
+                                                <td class="text-end">
                                                     <a href="{% url 'afat:statistics_character' char.2 year month %}" class="btn btn-primary btn-sm">
                                                         <span class="glyphicon glyphicon-eye-open"></span>
                                                     </a>
