--- a/afat/templates/afat/view/fatlinks/fatlinks_overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks_overview.html
@@ -24,9 +24,9 @@
 
     {% include "afat/partials/year_navigation.html" with url_previous_year=url_previous_year url_next_year=url_next_year url_current_year=url_current_year %}
 
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <table class="table table-striped table-hover" id="link-list" style="width: 100%;">
+    <div class="card card-default">
+        <div class="card-body">
+            <table class="table table-striped table-hover w-100" id="link-list">
                 <thead>
                     <tr>
                         <th>{% translate "Fleet name" %}</th>
