--- a/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_alliance_year_overview.html
@@ -25,8 +25,8 @@
 
     {% include "afat/partials/year_navigation.html" with url_previous_year=url_previous_year url_next_year=url_next_year url_current_year=url_current_year %}
 
-    <div class="panel panel-default">
-        <div class="panel-body">
+    <div class="card card-default">
+        <div class="card-body">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
@@ -51,7 +51,7 @@
                                 <td>{{ month.2 }}</td>
                             {% endif %}
 
-                            <td class="text-right">
+                            <td class="text-end">
                                 {% if alliance != "No Alliance" %}
                                     <a href="{% url 'afat:statistics_alliance' allianceid year month.0 %}" class="btn btn-primary btn-sm">
                                         <span class="glyphicon glyphicon-eye-open"></span>
