--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -7,6 +7,15 @@
     {{ page_title|title }}
 {% endblock %}
 
+{% block header_nav_brand %}
+    {% translate "Fleet activity tracking" as page_title %}
+    {{ page_title|title }}
+{% endblock %}
+
+{% block header_nav_collapse_left %}
+    {% include "afat/partials/menu.html" %}
+{% endblock %}
+
 {% block content %}
     <div class="allianceauth-afat">
         <div class="allianceauth-afat-header">
