--- a/afat/templates/afat/partials/fatlinks/add/clickable_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/clickable_link.html
@@ -4,9 +4,9 @@
 <div class="col-md-6 ml-md-2">
     <div class="card card-default">
         <div class="card-header">
-            <h3 class="card-title mb-0">
+            <div class="card-title mb-0">
                 {% translate "Create a clickable FAT link" %}
-            </h3>
+            </div>
         </div>
 
         <div class="card-body">
