--- a/afat/templates/afat/partials/fatlinks/add/esi_link.html
+++ b/afat/templates/afat/partials/fatlinks/add/esi_link.html
@@ -5,9 +5,9 @@
 <div class="col-md-6 mr-md-1">
     <div class="card card-default">
         <div class="card-header">
-            <h3 class="card-title mb-0">
-                {% translate "Create FAT link using ESI" %}
-            </h3>
+            <div class="card-title mb-0">
+                {% translate "Create a FAT link using ESI" %}
+            </div>
         </div>
 
         <div class="card-body">
@@ -15,7 +15,7 @@
                 {% blocktranslate %}
                     This option will automatically register and track the entire fleet
                     without fleet members having to click a link.<br><b>Use this if you
-                    are Fleet Boss</b>, otherwise please use the clickable FAT link
+                    are the Fleet Boss</b>, otherwise please use the clickable FAT link
                     option.
                 {% endblocktranslate %}
             </p>
