--- a/afat/templates/afat/view/statistics/statistics_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_overview.html
@@ -10,7 +10,8 @@
 {% endblock %}
 
 {% block afat_header %}
-    <h2>{% translate "Statistics" %}</h2>
+    {% translate "Statistics" as site_title %}
+    {% include "framework/header/page-header.html" with title=site_title %}
 {% endblock %}
 
 {% block afat_body %}
