--- a/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
+++ b/afat/templates/afat/view/statistics/statistics_corporation_year_overview.html
@@ -9,10 +9,8 @@
 {% endblock %}
 
 {% block afat_header %}
-    <h2>
-        {% translate "Fleet activity" as site_title %}
-        {{ corporation }} {{ site_title|title }}
-    </h2>
+    {% translate "Fleet activity" as site_title %}
+    {% include "framework/header/page-header.html" with title=site_title sub_title=corporation %}
 {% endblock %}
 
 {% block afat_body %}
