[CHANGE] Dashboard tabs to Bootstrap 5

--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div id="fatlinks" class="tab-pane fade card card-default">
+<div id="tab-fatlinks" class="tab-pane fade card card-default border-0" role="tabpanel" aria-labelledby="tab-fatlinks">
     <div class="card-body">
         <h4>
             {% translate "Most recent FAT links <small>(latest 10)</small>" %}
