--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -5,7 +5,7 @@
     let characters = [];
 </script>
 
-<div id="fats" class="tab-pane fade in active card card-default">
+<div id="tab-fats" class="tab-pane fade show active card card-default border-0" role="tabpanel" aria-labelledby="tab-fats">
     <div class="card-body">
         <h4>
             {% translate "Your most recent FATs" %}
@@ -16,7 +16,7 @@
         {% if characters %}
             <ul class="nav nav-pills">
                 {% for character in characters %}
-                    <li class="afat-character-tab{% if forloop.first %} active{% endif %}">
+                    <li class="nav-item afat-character-tab text-center">
                         <script>
                             characters.push({
                                 charId: {{ character.character_id }},
@@ -24,8 +24,16 @@
                             })
                         </script>
 
-                        <a data-toggle="tab" href="#{{ character.character_id }}">
-                            <img class="img-circle" src="{{ character.character_id|character_portrait_url:32 }}" alt="{{ character.character_name }}" style="margin-right: 0.25rem;">
+                        <a
+                            class="nav-link{% if forloop.first %} active{% endif %}"
+                            id="tab-{{ character.character_id }}"
+                            data-bs-toggle="tab"
+                            href="#content-{{ character.character_id }}"
+                            role="tab"
+                            aria-controls="content-{{ character.character_id }}"
+                            aria-selected="true"
+                        >
+                            <img class="rounded" src="{{ character.character_id|character_portrait_url:64 }}" alt="{{ character.character_name }}" width="48px" height="48px"><br>
                             <span id="afat-eve-character-id-{{ character.character_id }}">{{ character.character_name }}</span>
                         </a>
                     </li>
@@ -34,7 +42,7 @@
 
             <div class="tab-content">
                 {% for character in characters %}
-                    <div id="{{ character.character_id }}" class="tab-pane fade in card-default{% if forloop.first %} active{% endif %}">
+                    <div id="content-{{ character.character_id }}" class="tab-pane fade card-default{% if forloop.first %} show active{% endif %}">
                         <div class="card-body">
                             <table class="table table-striped table-hover w-100" id="recent-fats-character-{{ character.character_id }}">
                                 <thead>
